# mylog

./: .gitmodules  README.md  git_branch_cleaner.sh  git_branch_clear.sh  install.md
basic/: README.md
bitcoin_automation/: bolinger.csv  bolinger.py  bus_signal.csv  indicators.py  key.json  logic.py  ma.py  macd.csv  macd.py  main.py  master_key.txt  price.csv  price_data.py  readme.md  rsi.py  transaction.py
ecad/l298n_v1/: fp-lib-table  l298.kicad_sch  l298n.kicad_pcb  l298n.kicad_prl  l298n.kicad_pro  l298n.kicad_sch  report.txt  sym-lib-table
ecad/l298n_v1/outputs/: l298n-all-pos.csv  l298n-all.pos  l298n.step
esp/blink/: sdkconfig
esp/esp32/p2p/: CMakeLists.txt
esp/esp32c6/wifi/: CMakeLists.txt
esp/hello_world/: sdkconfig
esp/wifi_test/: CMakeLists.txt
esp/wifi_test/main/: main.c
fpga/tutorial/: counter.v  hello  my_design
html/: 1.html  2.html  3.html  4.html  basic1.html  basic3.html  index.html
kalman/: read_csv.py
kalman/csv/: aircraft.csv  aircraft2.csv  aricraft3.csv  building.csv  gold.csv  temperature.csv  vehicle_localization.csv
kalman/lin_kalman_1d/: aircraft.py  aircraft2.py  aircraft3.py  building.py  measure_gold.py  temperature.py
kalman/lin_kalman_nd/: cov_mat.py  eigen_val.py
kalman/multi_dimension_kalman/: vehicle_localization.py
kicad/junk/: junk.kicad_prl  junk.kicad_pro  junk.kicad_sch  ~junk.kicad_sch.lck
kicad/standard_copy/: standard_copy.kicad_prl  standard_copy.kicad_pro  standard_copy.kicad_sch
kicad/tutorial/: fp-lib-table  project_lib.kicad_sym  readme.md  sym-lib-table  tutorial.kicad_pcb  tutorial.kicad_prl  tutorial.kicad_pro  tutorial.kicad_sch  ~tutorial.kicad_sch.lck
kicad/tutorial/project_lib.pretty/: Bluetooth_Serial.kicad_mod
linux/: README.md
linux/makefile_tutorial/: Makefile
linux/module/: Makefile  hello_world_mod.c
opencv/code/: explain.md
opencv/code/pose/: try1.py
p2p/: Dockerfile
research/: .gitignore  .gitmodules
research/embedded_tdd_template/: Makefile
research/embedded_tdd_template/firmware/: .mxproject  CMakeLists.txt  Makefile  arm-none-eabi.cmake  firmware.ioc
research/embedded_tdd_template/test/: CMakeLists.txt  Makefile
research/embedded_tdd_template/test/Src/: add_test.cpp  multiply_test.cpp
research/googletest/: CMakeLists.txt
research/googletest/test/: CMakeLists.txt
research/makefileBuild/: .mxproject  CMakeLists.txt  Makefile  arm-none-eabi.cmake  makefileBuild.ioc
research/makefileBuild/Core/Src/: gpio.c  main.c  usb_otg.c
research/makefileBuild/cubeMX/: Makefile
research/template/: CMakeLists.txt  Makefile
research/template/Project/: test.c  test.h
ros/msgs/install/: local_setup.sh  setup.sh
ros/msgs/log/: latest_build
server/document_tutorial/myhome/: db.sqlite3  manage.py
socket/UDP/b_host1/: Makefile  main.c
socket/UDP/b_host2/: CMakeLists.txt  main.c
socket/UDP/clnt/: main.c
socket/UDP/srv/: CMakeLists.txt  main.c
socket/com_btw_proc/: echo.storeserv.c  pipe1  pipe1.c  pipe2  pipe2.c  pipe3  pipe3.c
socket/domain/hostbyaddr/: CMakeLists.txt  Makefile  main.c
socket/domain/hostbyname/: CMakeLists.txt  Makefile  main.c
socket/func/endian_conv/: CMakeLists.txt  Makefile  main.c
socket/func/inet_addr/: CMakeLists.txt  Makefile  main.c
socket/func/inet_aton/: CMakeLists.txt  Makefile  main.c
socket/func/inet_ntoa/: CMakeLists.txt  Makefile  main.c
socket/hello_world/: .gitignore
socket/hello_world/client/: CMakeLists.txt  Makefile  main.c
socket/hello_world/lread/: CMakeLists.txt  Makefile  main.c
socket/hello_world/lwrite/: CMakeLists.txt  Makefile  main.c
socket/hello_world/server/: CMakeLists.txt  Makefile  main.c
socket/hello_world/tcp_clnt/: CMakeLists.txt  Makefile  main.c
socket/iterative_echo/: Makefile
socket/iterative_echo/clnt/: CMakeLists.txt  Makefile  main.c
socket/iterative_echo/clnt2/: Makefile  main.c
socket/iterative_echo/srv/: Makefile  main.c
socket/op/clnt/: CMakeLists.txt  Makefile  main.c
socket/op/srv/: CMakeLists.txt  Makefile  main.c
socket/sock_option/bufSize/: CMakeLists.txt  Makefile  main.c
socket/sock_option/configbuf/: CMakeLists.txt  Makefile  main.c
socket/sock_option/type/: CMakeLists.txt  Makefile
socket/thread_server/: Makefile  echo_mpclient  echo_mpclient.c  fork  fork.c  move_zombie  multi_echo_serv  multi_echo_serv.c  remove_zombie.c  sigaction  sigaction.c  signal  signal.c  wait  wait.c  waitpid  waitpid.c  zombie  zombie.c
spice/: lmv324.lib  mos.lib  motor_current.cir  sample.cir  test.cir
spice/tutorial/: RC-circuit.cir
stm32/f401rb/datasheet/: README.md
stm32/proj1/drivers/: README.md
verilog/tutorial/: display.v  hello  hello.v  hello.vvp  tb_test_wor.v  test_wor  test_wor.v  test_wor.vcd  test_wor.vvp  tutorial.md
verilog/tutorial/old_tutorial/: counter.v  counter_tb.v  display  hello  hello.v  hello.vvp  my_design  tb_test_wor.v  test_wor  test_wor.v  tutorial.md
verilog/tutorial/testbench_tutorial/: Makefile  (+3 more)
(+29 files in other folders)
